--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,14 @@
   font-family: "Bad Script", cursive;
   font-weight: 400;
   font-style: normal;
+  
 }
+.bruno-ace-regular {
+  font-family: "Bruno Ace", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 .bruno-ace-sc-regular {
   font-family: "Bruno Ace SC", sans-serif;
   font-weight: 400;
